[package]
name           = "rbp-gameplay"
version        = "1.0.0"
edition        = "2024"
rust-version   = "1.90"
authors        = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
description    = "Poker game engine with state management, action handling, and settlement"
license        = "MIT"
repository     = "https://github.com/krukah/robopoker"
keywords       = ["poker", "game-engine", "holdem"]
categories     = ["game-development"]

[features]
default        = []
client         = ["rbp-cards/client"]

[dependencies]
tracing       = { workspace = true }
rbp-core       = { path = "../util"                      }
rbp-cards      = { path = "../cards"                     }
rbp-translate  = { path = "../translate"                 }
rbp-hyperparams = { workspace = true                         }
rand           = { version = "0.9.1", features = ["small_rng"] }
serde          = { version = "1.0",   features = ["derive"]    }
serde_json     = "1.0"
uuid           = { version = "1", features = ["serde"]         }
anyhow         = "1.0"
petgraph       = "0.6"
