[package]
name         = "rbp-gameroom"
version      = "1.1.0"
edition      = "2024"
rust-version = "1.90"
authors      = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
description  = "Async game coordinator for live poker sessions"
license      = "MIT"
repository   = "https://github.com/krukah/robopoker"
keywords     = ["poker", "async", "gameroom", "multiplayer"]
categories   = ["game-development", "asynchronous"]

[features]
default = []
server = [
  "rbp-database",
  "rbp-nlhe",
  "rbp-mccfr",
  "rbp-subgame",
  "rbp-depth",
  "rbp-world",
  "rbp-transport",
  "rbp-telemetry",
]
cli = ["dialoguer"]

[dependencies]
rbp-core       = { workspace = true }
rbp-cards      = { workspace = true }
rbp-gameplay   = { workspace = true }
rbp-auth       = { workspace = true }
rbp-nlhe       = { workspace = true, optional = true, features = ["server"] }
rbp-mccfr      = { workspace = true, optional = true }
rbp-subgame    = { workspace = true, optional = true }
rbp-depth      = { workspace = true, optional = true }
rbp-world      = { workspace = true, optional = true }
rbp-transport  = { workspace = true, optional = true }
rbp-database   = { workspace = true, optional = true }
rbp-telemetry  = { workspace = true, optional = true }
tokio          = { version = "1", features = ["sync", "time", "rt", "macros"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
async-trait    = "0.1"
const_format   = "0.2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
tracing        = { workspace = true }
uuid           = "1"
rand           = { workspace = true }
dialoguer      = { version = "0.11", optional = true }

[lints]
workspace = true
