[package]
name         = "horizon"
publish      = false
version      = "1.1.0"
edition      = "2024"
rust-version = "1.90"
authors      = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
description  = "Depth-limited solving with biased continuation strategies"
license      = "MIT"
repository   = "https://github.com/krukah/robopoker"
keywords     = ["depth-limited", "cfr", "game-theory", "frontier"]
categories   = ["algorithms", "mathematics", "game-development"]

[dependencies]
tracing  = { workspace = true }
pokerkit = { workspace = true }
monge    = { workspace = true }
mccfr    = { version = "1.1", path = "../mccfr", default-features = false }
petgraph = { workspace = true }

[lints]
workspace = true
