[package]
name          = "rbp-hosting"
version       = "1.0.0"
edition       = "2024"
rust-version  = "1.90"
authors       = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
description   = "WebSocket game hosting infrastructure for poker"
license       = "MIT"
repository    = "https://github.com/krukah/robopoker"
keywords      = ["websocket", "hosting", "poker", "multiplayer"]
categories    = ["web-programming", "game-development"]

[dependencies]
rbp-core      = { path = "../util"     }
rbp-auth      = { path = "../auth"     }
rbp-gameroom  = { path = "../gameroom" }
rbp-gameplay  = { path = "../gameplay" }
rbp-players   = { path = "../players"  }
rbp-records   = { path = "../records"  }
tokio-postgres = "0.7"
tokio         = { version = "1", features = ["sync", "rt"] }
actix-web     = "4"
actix-ws      = "0.3"
async-trait   = "0.1"
uuid          = "1"
futures       = "0.3"
serde_json    = "1"
log           = "0.4"
anyhow        = "1"
