[package]
name         = "kicker"
version      = "1.1.0"
edition      = "2024"
rust-version = "1.90"
authors      = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
description  = "Card representation, hand evaluation, and strategic abstraction primitives"
license      = "MIT"
repository   = "https://github.com/krukah/robopoker"
keywords     = ["poker", "cards", "hand-evaluation", "nlhe"]
categories   = ["game-development", "algorithms"]

[features]
default   = []
shortdeck = []

[dependencies]
fulcrum = { workspace = true }
rand    = { workspace = true }
serde   = { version = "1.0", features = ["derive"] }
anyhow  = "1.0"

[lints]
workspace = true
