[package]
name         = "kicker"
version      = "1.1.0"
edition      = "2024"
rust-version = "1.90"
authors      = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
description  = "Poker game engine with state management, action handling, and settlement"
license      = "MIT"
repository   = "https://github.com/krukah/robopoker"
keywords     = ["poker", "game-engine", "nlhe"]
categories   = ["game-development"]

[dependencies]
tracing    = { workspace = true }
pokerkit   = { workspace = true }
deuce      = { workspace = true }
solus      = { workspace = true }
rand       = { workspace = true }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid       = { version = "1", features = ["serde"] }
anyhow     = "1.0"
petgraph   = { workspace = true }

[lints]
workspace = true
