[package]
name         = "leduc"
publish      = false
version      = "1.1.0"
edition      = "2024"
rust-version = "1.90"
authors      = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
description  = "Leduc Hold'em solver for MCCFR framework validation"
license      = "MIT"
repository   = "https://github.com/krukah/robopoker"
keywords     = ["leduc", "cfr", "game-theory", "poker", "solver"]
categories   = ["algorithms", "mathematics", "game-development"]

[dependencies]
pokerkit = { workspace = true }
mccfr    = { workspace = true }
endgame  = { workspace = true }
horizon  = { workspace = true }
atlas    = { workspace = true }
monge    = { workspace = true }
paste    = "1.0"
rand     = { workspace = true }

[lints]
workspace = true
