[package]
name         = "rbp-litmus"
publish      = false
version      = "1.1.0"
edition      = "2024"
rust-version = "1.90"
authors      = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
license      = "MIT"
repository   = "https://github.com/krukah/robopoker"
description  = "Strategic litmus tests for blueprint validation. Composable, type-safe scenario catalog with a typed Ops trait that the server (or any backend) implements."
keywords     = ["poker", "testing", "validation", "nlhe"]
categories   = ["game-development", "development-tools"]

[lib]
name = "rbp_litmus"
path = "src/lib.rs"

[features]
default = []

[dependencies]
rbp-cards    = { workspace = true }
rbp-core     = { workspace = true }
rbp-gameplay = { workspace = true }

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
chrono      = { version = "0.4", default-features = false, features = ["clock"] }
async-trait = "0.1"

[lints]
workspace = true
