[package]
name          = "rbp-mccfr"
version       = "1.0.0"
edition       = "2024"
rust-version  = "1.90"
authors       = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
description   = "Game-agnostic Monte Carlo Counterfactual Regret Minimization framework"
license       = "MIT"
repository    = "https://github.com/krukah/robopoker"
keywords      = ["mccfr", "cfr", "game-theory", "nash-equilibrium", "solver"]
categories    = ["algorithms", "mathematics", "game-development"]

[features]
default       = []
server        = ["rbp-core/server", "rayon"]

[dependencies]
rbp-core      = { version = "1.0", path = "../util"      }
rbp-transport = { version = "1.0", path = "../transport" }
rand          = { version = "0.9.1", features = ["small_rng"] }
petgraph      = "0.7"
paste         = "1.0"
rayon         = { optional = true, version = "1.10" }
