[package]
name         = "monge"
version      = "1.1.0"
edition      = "2024"
rust-version = "1.90"
authors      = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
description  = "Optimal transport and Earth Mover's Distance via Sinkhorn algorithm"
license      = "MIT"
repository   = "https://github.com/krukah/robopoker"
keywords     = ["optimal-transport", "sinkhorn", "emd", "wasserstein"]
categories   = ["algorithms", "mathematics"]

[dependencies]
fulcrum = { workspace = true }

[lints]
workspace = true
