[package]
name           = "rbp-nlhe"
version        = "1.0.0"
edition        = "2024"
rust-version   = "1.90"
authors        = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
description    = "No-Limit Hold'em MCCFR solver with Pluribus-inspired abstraction"
license        = "MIT"
repository     = "https://github.com/krukah/robopoker"
keywords       = ["poker", "holdem", "mccfr", "pluribus"]
categories     = ["game-development", "algorithms"]

[features]
default        = []
database       = ["tokio-postgres", "const_format", "async-trait", "rbp-database", "futures"]
server         = ["rbp-mccfr/server"]

[dependencies]
tracing         = { workspace = true }
rbp-core        = { path = "../util" }
rbp-cards       = { path = "../cards" }
rbp-gameplay    = { path = "../gameplay" }
rbp-transport   = { path = "../transport" }
rbp-mccfr       = { path = "../mccfr", default-features = false }
rbp-subgame     = { path = "../subgame" }
rbp-depth       = { path = "../depth" }
rbp-world       = { path = "../world" }
rbp-database    = { path = "../database", optional = true }
paste          = "1.0"
rand           = { version = "0.9.1", features = ["small_rng"] }
anyhow         = "1.0"
tokio-postgres = { version = "0.7", optional = true }
const_format   = { version = "0.2", optional = true }
async-trait    = { version = "0.1", optional = true }
futures        = { version = "0.3", optional = true }
