[package]
name         = "rbp-nlhe"
publish      = false
version      = "1.1.0"
edition      = "2024"
rust-version = "1.90"
authors      = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
description  = "No-Limit Hold'em MCCFR solver with Pluribus-inspired abstraction"
license      = "MIT"
repository   = "https://github.com/krukah/robopoker"
keywords     = ["poker", "nlhe", "mccfr", "pluribus"]
categories   = ["game-development", "algorithms"]

[features]
default = []
server  = ["tokio-postgres", "const_format", "async-trait", "rbp-database", "futures", "rbp-mccfr/server"]

[dependencies]
tracing        = { workspace = true }
rbp-core       = { workspace = true }
rbp-cards      = { workspace = true }
rbp-gameplay   = { workspace = true }
rbp-transport  = { workspace = true }
rbp-mccfr      = { version = "1.1", path = "../mccfr", default-features = false }
rbp-subgame    = { workspace = true }
rbp-depth      = { workspace = true }
rbp-world      = { workspace = true }
rbp-database   = { workspace = true, optional = true }
paste          = "1.0"
rand           = { workspace = true }
anyhow         = "1.0"
tokio-postgres = { version = "0.7", optional = true }
const_format   = { version = "0.2", optional = true }
async-trait    = { version = "0.1", optional = true }
futures        = { version = "0.3", optional = true }

[lints]
workspace = true
