[package]
name         = "nlhe"
version      = "1.1.0"
edition      = "2024"
rust-version = "1.90"
authors      = ["Kelechi Ukah <ukahkelechi@gmail.com>"]
description  = "No-Limit Hold'em MCCFR solver with Pluribus-inspired abstraction"
license      = "MIT"
repository   = "https://github.com/krukah/robopoker"
keywords     = ["poker", "nlhe", "mccfr", "pluribus"]
categories   = ["game-development", "algorithms"]

[features]
default = []
server  = ["tokio-postgres", "const_format", "async-trait", "ledger", "futures", "mccfr/server"]

[dependencies]
tracing        = { workspace = true }
pokerkit       = { workspace = true }
deuce          = { workspace = true }
kicker         = { workspace = true }
monge          = { workspace = true }
mccfr          = { version = "1.1", path = "../mccfr", default-features = false }
subgame        = { workspace = true }
ledger         = { workspace = true, optional = true }
paste          = "1.0"
rand           = { workspace = true }
anyhow         = "1.0"
tokio-postgres = { version = "0.7", optional = true }
const_format   = { version = "0.2", optional = true }
async-trait    = { version = "0.1", optional = true }
futures        = { version = "0.3", optional = true }

[lints]
workspace = true
